# svt

./: CMakeLists.txt
1/inmost/: CMakeLists.txt  main.cpp
1/sparskit/: CMakeLists.txt  main.f90
2/: mesh.geo  mesh.vtk
3/: diag1.vtk  diag2.vtk  diag3.vtk  struct1.vtk  struct2.vtk  struct3.vtk  struct4.vtk  struct5.vtk
fdm/: CMakeLists.txt  fdm.ipynb  main.cpp
fem/: CMakeLists.txt  main.cpp
fvm/: CMakeLists.txt  main.cpp
nonstationary/: nonstationary.ipynb
